--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     <div class="custom-navelements">
 
 
-                        <div><button href="https://business.bringerapp.com/" class="custom-button">Upload Photos</button></div>
-                        <div><button class="https://app.bringerapp.com">Get Photos</button></div>
+                        <div><button onclick="window.open('https://business.bringerapp.com/')" class="custom-button">Upload Photos</button></div>
+                        <div><button onclick="window.open('https://app.bringerapp.com')" class="custom-button">Get Photos</button></div>
                     </div>
                 </div>
                 <div class="Box-rui__sc-1g1k12l-0 bqwQoF" style="">
