--- a/pro.html
+++ b/pro.html
@@ -46,10 +46,10 @@
             var c = document.querySelector(".bqwQoF");
             var hide = document.querySelector(".custom-hide")
                 // Add console.log statements to check if the elements are being found correctly.
-
+                var whatsapp = document.querySelector(".whatsapp")
             c.classList.toggle("open");
             element.classList.toggle("open");
-
+            whatsapp.classList.toggle("open");
             if (c.classList.contains("open")) {
                 // Disable scroll 
                 body.style.overflow = "hidden";
@@ -74,9 +74,14 @@
 
         gtag('config', 'G-EGGTQVXLC4');
     </script>
+     <script src="https://kit.fontawesome.com/7eb9c98bb2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <div class="whatsapp">
+        <a class="whats-button" href="https://api.whatsapp.com/send/?phone=%2B918248171862&text=Hi"><i class="fa-brands fa-whatsapp"></i></a>
+        <span class="whats-text">Hi there!!</span>
+    </div>
     <div id="__next">
         <header data-blockid="navigation" role="banner" offset="0" class="Box-rui__sc-1g1k12l-0 sc-fdd86e15-0 eMtgdA ioDTcg">
             <div class="Box-rui__sc-1g1k12l-0 sc-fdd86e15-1 eMtgdA iWJjxi">
@@ -93,7 +98,7 @@
                 <div class="custom-nav">
                     <div class="custom-navelements">
 
-                        <div><a class="bwaeom" href="https://api.whatsapp.com/send/?phone=%2B918248171862&text=Hi">Contact us</a></div>
+                        <div><a class="bwaeom" style="pointer-events: all" href="https://api.whatsapp.com/send/?phone=%2B918248171862&text=Hi">Contact us</a></div>
                         <div><button onclick="window.open('https://business.bringerapp.com')" class="custom-button">Try Bringer Free</button></div>
                         <div><button onclick="window.open('https://form.jotform.com/233184158228054')" class="custom-button">Get Bringer Pro</button></div>
                     </div>
@@ -134,7 +139,6 @@
 
     </div>
     </section>
-
     <section data-blockid="26f7f51b-e262-4652-953a-9fac402f23a3" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-4baf7d1c-0 fhYMfy" style="">
         <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW" style="text-align: center; ">Share photos with ease</p>
         <h2 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko ljMcTN sc-4baf7d1c-2 jFBAQk">Enjoy a radically better experience</h2>
