--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
             var c = document.querySelector(".bqwQoF");
             var coll = document.querySelector(".scroller");
             var hide = document.querySelector(".custom-hide")
+            var whatsapp = document.querySelector(".whatsapp")
                 // Add console.log statements to check if the elements are being found correctly.
             console.log("element:", element);
             console.log("c:", c);
             c.classList.toggle("open");
+            whatsapp.classList.toggle("open");
             element.classList.toggle("open");
             coll.classList.toggle("open");
             if (c.classList.contains("open")) {
@@ -75,7 +77,7 @@
 
         gtag('config', 'G-EGGTQVXLC4');
     </script>
-
+    <script src="https://kit.fontawesome.com/7eb9c98bb2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -135,6 +137,11 @@
                 </div>
 
     </div>
+        <div class="whatsapp">
+            <a class="whats-button" href="https://api.whatsapp.com/send/?phone=%2B918248171862&text=Hi"><i class="fa-brands fa-whatsapp"></i></a>
+            <span class="whats-text">Hi there!!</span>
+        </div>
+
     </section>
     <div style="text-align: center; padding-bottom: 50px; padding-top: 25px;  font-family: Inter;
         font-size: 20px;
