--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     </div>
         <div class="whatsapp">
-            <a class="whats-button" href="https://api.whatsapp.com/send/?phone=%2B918248171862&text=Hi"><i class="fa-brands fa-whatsapp"></i></a>
+            <a class="whats-button" href="https://api.whatsapp.com/send/?phone=%2B918248171862&text=Hi"><img src="./Bringer-assets/assets/icons/whatsapp.svg" style="width:60px;"></a>
             <span class="whats-text">Hi there!!</span>
         </div>
 
@@ -150,25 +150,41 @@
         letter-spacing: 0em;
         text-align: center;
         ">Events we were a part of</div>
-    <div class="scroller">
-        <div class="scroller-inner">
+    <div class="scroll">
+        <div class="scroll-in">
+            <img src="./Bringer-assets/assets/icons/event carousel/cto.svg" alt="cto">
             <img src="./Bringer-assets/assets/icons/event carousel/5aY5jj8BDvCa0TtLeezBDHMDSwo.webp" alt="madras">
             <img src="./Bringer-assets/assets/icons/event carousel/aEkX7tkM9ok9dmp8yGZaebcg.webp" alt="cto">
-            <img src="./Bringer-assets/assets/icons/event carousel/cto.svg" alt="cto">
             <img src="./Bringer-assets/assets/icons/event carousel/Group 669561.png" alt="cto">
             <img src="./Bringer-assets/assets/icons/event carousel/madras.svg" alt="cto">
-            <img src="./Bringer-assets/assets/icons/event carousel/OFPHJOQ9KWU2SoVIqtT7Warywkg.webp" alt="cto">
             <img src="./Bringer-assets/assets/icons/event carousel/OpZGYTHFKUyZCgOtDpxT2oYwgQ.png" alt="cto">
+            <img src="./Bringer-assets/assets/icons/event carousel/OFPHJOQ9KWU2SoVIqtT7Warywkg.webp" alt="cto">
+            </div>
+            <div class="scroll-in">
             <img src="./Bringer-assets/assets/icons/event carousel/simpl.svg" alt="cto">
             <img src="./Bringer-assets/assets/icons/event carousel/Tn3Ze6Ff7hTBsJnG3CBJGmUPy4.webp" alt="cto">
             <img src="./Bringer-assets/assets/icons/event carousel/WdPi4jXlAndi4L1bNZolVJbqc.webp" alt="cto">
             <img src="./Bringer-assets/assets/icons/event carousel/xDbH8cudu4w6ihwhaSoMRTJTtQA.webp" alt="cto">
             <img src="./Bringer-assets/assets/icons/event carousel/YJp4R4CfpxFHulFZhWd99iBgBo.webp" alt="cto">
             <img src="./Bringer-assets/assets/icons/event carousel/ZK13L02lor6GbiPRtanoLrrYs.webp" alt="cto">
-
-
         </div>
     </div>
+    <section data-blockid="5e10466a-a827-4df4-aeff-f54756df0bdb" data-type="tile-default" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-f691958d-0 cUeicM" style="padding-top: 50px;">
+        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 doVmft bsDSER sc-f691958d-1 jnxckT" href="pro.html" style="background-color: #191C1F;">
+            <div class="custom-section">
+                <span class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-f691958d-2 gwbgho iKkCyI"><h3 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-2eed654d-0 hTFxko bdsGII" style="margin-top: 0;"><span max="5" class="LineClamp__LineClampBase-rui__sc-1asyw6f-0 eAFepp">AI Photo Distribution</span></h3>
+                <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-e5e942d-0 hTFxko itRRDa">Elevate the customer experience at events by sharing your photos in real-time, using advanced facial recognition and event photography technology.</p>
+                <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-7e848c7d-0 hpoCtN kWkRza" style="display: block;"><span class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko dwrPIG"><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 iriJld" style="background: white; border-radius:9999px;">Try Now</span></span>
+                </div>
+                </span>
+                <div class="custom-imgsection">
+                    <img style="" src="./Bringer-assets/assets/icons/first.svg"></div>
+            </div>
+            </div>
+
+            </div>
+        </a>
+    </section>
     <section data-blockid="26f7f51b-e262-4652-953a-9fac402f23a3" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-4baf7d1c-0 fhYMfy" style="">
         <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW" style="text-align: center; ">What's there for you</p>
         <h2 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko ljMcTN sc-4baf7d1c-2 jFBAQk">Get Awesome Candids with <br> Utmost Security</h2>
