--- a/pro.html
+++ b/pro.html
@@ -76,12 +76,10 @@
     </script>
      <script src="https://kit.fontawesome.com/7eb9c98bb2.js" crossorigin="anonymous"></script>
 </head>
-
-<body>
-    <div class="whatsapp">
-        <a class="whats-button" href="https://api.whatsapp.com/send/?phone=%2B918248171862&text=Hi"><i class="fa-brands fa-whatsapp"></i></a>
-        <span class="whats-text">Hi there!!</span>
-    </div>
+<div class="whatsapp">
+    <a class="whats-button" href="https://api.whatsapp.com/send/?phone=%2B918248171862&text=Hi"><img src="./Bringer-assets/assets/icons/whatsapp.svg" style="width:60px;"></a>
+    <span class="whats-text">Hi there!!</span>
+</div>
     <div id="__next">
         <header data-blockid="navigation" role="banner" offset="0" class="Box-rui__sc-1g1k12l-0 sc-fdd86e15-0 eMtgdA ioDTcg">
             <div class="Box-rui__sc-1g1k12l-0 sc-fdd86e15-1 eMtgdA iWJjxi">
