--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
     </div>
     <section data-blockid="5e10466a-a827-4df4-aeff-f54756df0bdb" data-type="tile-default" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-f691958d-0 cUeicM" style="padding-top: 50px;">
-        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 doVmft bsDSER sc-f691958d-1 jnxckT" href="pro.html" style="background-color: #191C1F;">
+        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 doVmft bsDSER sc-f691958d-1 jnxckT" href="pro.html" style="background-color: #191C1F; z-index:-100;">
             <div class="custom-section">
                 <span class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-f691958d-2 gwbgho iKkCyI"><h3 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-2eed654d-0 hTFxko bdsGII" style="margin-top: 0;"><span max="5" class="LineClamp__LineClampBase-rui__sc-1asyw6f-0 eAFepp">AI Photo Distribution</span></h3>
                 <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-e5e942d-0 hTFxko itRRDa">Elevate the customer experience at events by sharing your photos in real-time, using advanced facial recognition and event photography technology.</p>
