--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     
             <!-- Image 3 -->
             <div class="image-container">
-                <img src="./Bringer-assets/assets/icons/event carousel/Frame_3.png" alt="Image 3" width="300" height="250">
+                <img src="./Bringer-assets/assets/icons/event carousel/frame_3.png" alt="Image 3" width="300" height="250">
                 <h3 style="text-align: center;">3. Sit Back while we Deliver the Photos.</h3>
                 <!-- <p>We will take over from here. Your Photos are on their way to the Attendees!  </p> -->
             </div>
@@ -289,11 +289,11 @@
     </div>
 
 </body>
-<script defer="">
+<!-- <script defer="">
     var copy = document.querySelector(".scroller-inner");
     var out = copy.cloneNode(true);
     console.log('hi');
     document.querySelector('.scroller').appendChild(out);
-</script>
+</script> -->
 
 </html>
