--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div><span class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 gwbgho hetXNt"><a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 beemZw lbSvEU" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span>
 
                     </a>
-                    <a data-blockid="signup-button" href="./pro.html" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" style="background-color: transparent;"
+                    <a data-blockid="signup-button" href="./pro.html" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" style="background-color: white; border: inset;"
                         aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get Bringer Pro</span></a>
                     <a data-blockid="signup-button" href="https://business.bringerapp.com/" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0  custom-button border-round-full"
                         aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Upload Photos</span></a>
@@ -121,12 +121,10 @@
                         <h1 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 brgVtP dfMyAW" style="text-align: center;">All your event <br> Photos at one place. <br><span class="customimg-flex" style="gap:5px"><span class="customm-magic">With AI Magic</span><span class="customimg-flex"><div><img src="./Bringer-assets/assets/icons/star1.svg" alt=" Bringer"></div></span></span>
                         </h1>
 
-                        <div class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 dWQrtk gsaalT" style="text-align: center;">
-                            <p>Click here to get your photos</p>
-                            </span>
-                        </div>
+                        
                         <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 gwbgho hJKPBb" style="margin-top: 20px" ;>
-                            <a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get my photos</span></a>
+                            <a href="https://business.bringerapp.com" class="custom-button ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0   border-round-full" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Upload Photos</span></a>
+                            <a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get My Photos</span></a>
                         </div>
                     </div>
                     <div>
@@ -156,14 +154,14 @@
         <img src="./Bringer-assets/assets/icons/how to.png" alt="">
     </div>
     <div class="section-right">
-        <h6> How to use Bringer?</h6>
+        <h6> How to use <span style="font-weight: 700;">Bringer?</span> </h6>
         <ol>
             <li> Click get my photos</li>
             <li>Register and take a selfie</li>
             <li>You will receive a whatsapp notification when your photos are found</li>
         </ol>
         <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 gwbgho hJKPBb" style="margin-top: 20px" ;>
-            <a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get my photos</span></a>
+            <a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get my photos</span></a>
         </div>
     </div>
 </section>
@@ -207,7 +205,7 @@
             <h2 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko ljMcTN sc-4baf7d1c-2 jFBAQk">Share event photos <br>in a single click</h2>
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 iqmbuT jrZvPu sc-4baf7d1c-3 iPdfWq">We understand sharing photos to a large group is time consuming and hard, so we've made it incredibly simple with AI</p>
         </section>
-        <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW" style="text-align: center; padding-top: 50px; ">How to upload photos on Bringer ?</p>
+        <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW" style="text-align: center; padding-top: 50px; ">How to upload photos on <span style="font-weight: 600;">Bringer?</span></p>
 
         <div class="new-section" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
             
@@ -248,8 +246,8 @@
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW" style="">Bringer Pro: The Professional’s Choice</p>
             <h2  style="color: white;white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">Elevate Your Brand, Drive Website Traffic, and Generate Leads with Bringer Pro</h2>
             <p style="color: gray; font-size: 13px;">With Bringer Pro, you can effortlessly brand your photos, attract more visitors to your website, and convert them into leads. Our advanced features are designed to meet the needs of professionals who demand the best. Don’t just take our word for it, explore the benefits of Bringer Pro for yourself.</p>
-            <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-4baf7d1c-4 gwbgho ehZymP"><a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 lmpNJr ioXDdg"
-                    aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf" style="">Discover More</span></a></div>
+            <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-4baf7d1c-4 gwbgho ehZymP"><a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 lmpNJr ioXDdg border-round-full"
+                    aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf " style="">Discover More</span></a></div>
         </section>
         <section data-blockid="24a7ffd9-cd9c-4817-894a-e825e8c27040" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 fgxAwG cNPxDM sc-12629982-0 eRSURy">
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko hkRffL sc-12629982-1 cThGcW" style="">© Bringer
