--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div><span class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 gwbgho hetXNt"><a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 beemZw lbSvEU" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span>
 
                     </a>
-                    <a data-blockid="signup-button" href="./pro.html" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" style="background-color: white; border: inset;"
+                    <a data-blockid="signup-button" href="./pro.html" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" style="background-color: white; border: 2px solid black;"
                         aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get Bringer Pro</span></a>
                     <a data-blockid="signup-button" href="https://business.bringerapp.com/" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0  custom-button border-round-full"
                         aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Upload Photos</span></a>
@@ -154,7 +154,7 @@
         <img src="./Bringer-assets/assets/icons/how to.png" alt="">
     </div>
     <div class="section-right">
-        <h6> How to use <span style="font-weight: 700;">Bringer?</span> </h6>
+        <h6> How to use <span style="font-weight: 800;">Bringer?</span> </h6>
         <ol>
             <li> Click get my photos</li>
             <li>Register and take a selfie</li>
