--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 
 <head>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NQHB82ZX');</script>
+    <!-- End Google Tag Manager -->
     <meta charSet="utf-8" />
     <title>Bringer | All your event photos in one place</title>
     <meta name="description" content="Get all of your event photos through AI" />
@@ -77,6 +84,10 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NQHB82ZX"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="__next">
         <header data-blockid="navigation" role="banner" offset="0" class="Box-rui__sc-1g1k12l-0 sc-fdd86e15-0 eMtgdA ioDTcg">
             <div class="Box-rui__sc-1g1k12l-0 sc-fdd86e15-1 eMtgdA iWJjxi">
