--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div><button onclick="window.open('https://app.bringerapp.com')" class="custom-button">Get Photos</button></div>
                     </div>
                 </div>
-                <div class="Box-rui__sc-1g1k12l-0 bqwQoF" style="">
+                <div class="Box-rui__sc-1g1k12l-0 bqwQoF" >
 
                     <button onclick="change()" aria-label="Open-menu" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 egNBzp ButtonBase-rui__sc-1aqanxw-2 IconButton__IconButtonBase-rui__sc-1xan14r-0 iHLlRu gJcScB" type="button"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Box-rui__sc-1g1k12l-0 ZStack-rui__sc-1v99yf7-0 eMtgdA gFcVDA"><svg viewBox="0 0 24 24" size="24" class="icon-base__IconBase-rui__sc-1efctcf-0 biFlk"><g fill="currentColor"><path fill="currentColor" d="M3.727 6.564c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064V6.8c0 .587-.476 1.064-1.064 1.064H4.791A1.064 1.064 0 0 1 3.727 6.8v-.236Zm0 5.318c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064v.236c0 .588-.476 1.064-1.064 1.064H4.791a1.064 1.064 0 0 1-1.064-1.064v-.236Zm1.064 4.254c-.588 0-1.064.477-1.064 1.064v.236c0 .588.477 1.064 1.064 1.064h14.418c.588 0 1.064-.476 1.064-1.064V17.2c0-.587-.476-1.064-1.064-1.064H4.791ZM3.727 6.564c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064V6.8c0 .587-.476 1.064-1.064 1.064H4.791A1.064 1.064 0 0 1 3.727 6.8v-.236Zm0 5.318c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064v.236c0 .588-.476 1.064-1.064 1.064H4.791a1.064 1.064 0 0 1-1.064-1.064v-.236Zm1.064 4.254c-.588 0-1.064.477-1.064 1.064v.236c0 .588.477 1.064 1.064 1.064h14.418c.588 0 1.064-.476 1.064-1.064V17.2c0-.587-.476-1.064-1.064-1.064H4.791ZM3.727 6.564c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064V6.8c0 .587-.476 1.064-1.064 1.064H4.791A1.064 1.064 0 0 1 3.727 6.8v-.236Zm0 5.318c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064v.236c0 .588-.476 1.064-1.064 1.064H4.791a1.064 1.064 0 0 1-1.064-1.064v-.236Zm1.064 4.254c-.588 0-1.064.477-1.064 1.064v.236c0 .588.477 1.064 1.064 1.064h14.418c.588 0 1.064-.476 1.064-1.064V17.2c0-.587-.476-1.064-1.064-1.064H4.791Z"></path><path fill="currentColor" d="M3.727 6.564c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064V6.8c0 .587-.476 1.064-1.064 1.064H4.791A1.064 1.064 0 0 1 3.727 6.8v-.236Zm0 5.318c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064v.236c0 .588-.476 1.064-1.064 1.064H4.791a1.064 1.064 0 0 1-1.064-1.064v-.236Zm1.064 4.254c-.588 0-1.064.477-1.064 1.064v.236c0 .588.477 1.064 1.064 1.064h14.418c.588 0 1.064-.476 1.064-1.064V17.2c0-.587-.476-1.064-1.064-1.064H4.791ZM3.727 6.564c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064V6.8c0 .587-.476 1.064-1.064 1.064H4.791A1.064 1.064 0 0 1 3.727 6.8v-.236Zm0 5.318c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064v.236c0 .588-.476 1.064-1.064 1.064H4.791a1.064 1.064 0 0 1-1.064-1.064v-.236Zm1.064 4.254c-.588 0-1.064.477-1.064 1.064v.236c0 .588.477 1.064 1.064 1.064h14.418c.588 0 1.064-.476 1.064-1.064V17.2c0-.587-.476-1.064-1.064-1.064H4.791ZM3.727 6.564c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064V6.8c0 .587-.476 1.064-1.064 1.064H4.791A1.064 1.064 0 0 1 3.727 6.8v-.236Zm0 5.318c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064v.236c0 .588-.476 1.064-1.064 1.064H4.791a1.064 1.064 0 0 1-1.064-1.064v-.236Zm1.064 4.254c-.588 0-1.064.477-1.064 1.064v.236c0 .588.477 1.064 1.064 1.064h14.418c.588 0 1.064-.476 1.064-1.064V17.2c0-.587-.476-1.064-1.064-1.064H4.791Z"></path><path fill="currentColor" d="M3.727 6.564c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064V6.8c0 .587-.476 1.064-1.064 1.064H4.791A1.064 1.064 0 0 1 3.727 6.8v-.236Zm0 5.318c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064v.236c0 .588-.476 1.064-1.064 1.064H4.791a1.064 1.064 0 0 1-1.064-1.064v-.236Zm1.064 4.254c-.588 0-1.064.477-1.064 1.064v.236c0 .588.477 1.064 1.064 1.064h14.418c.588 0 1.064-.476 1.064-1.064V17.2c0-.587-.476-1.064-1.064-1.064H4.791ZM3.727 6.564c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064V6.8c0 .587-.476 1.064-1.064 1.064H4.791A1.064 1.064 0 0 1 3.727 6.8v-.236Zm0 5.318c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064v.236c0 .588-.476 1.064-1.064 1.064H4.791a1.064 1.064 0 0 1-1.064-1.064v-.236Zm1.064 4.254c-.588 0-1.064.477-1.064 1.064v.236c0 .588.477 1.064 1.064 1.064h14.418c.588 0 1.064-.476 1.064-1.064V17.2c0-.587-.476-1.064-1.064-1.064H4.791ZM3.727 6.564c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064V6.8c0 .587-.476 1.064-1.064 1.064H4.791A1.064 1.064 0 0 1 3.727 6.8v-.236Zm0 5.318c0-.588.477-1.064 1.064-1.064h14.418c.588 0 1.064.476 1.064 1.064v.236c0 .588-.476 1.064-1.064 1.064H4.791a1.064 1.064 0 0 1-1.064-1.064v-.236Zm1.064 4.254c-.588 0-1.064.477-1.064 1.064v.236c0 .588.477 1.064 1.064 1.064h14.418c.588 0 1.064-.476 1.064-1.064V17.2c0-.587-.476-1.064-1.064-1.064H4.791Z"></path></g></svg><div class="VisuallyHidden-rui__sc-p5i143-0 dpAImt"></div></span>
         </button></div>
@@ -150,7 +150,7 @@
         </div>
 
     </section>
-    <section data-blockid="26f7f51b-e262-4652-953a-9fac402f23a3" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-4baf7d1c-0 fhYMfy" style="">
+    <section data-blockid="26f7f51b-e262-4652-953a-9fac402f23a3" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-4baf7d1c-0 fhYMfy" >
         <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW" style="text-align: center; ">What's there for you</p>
         <h2 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko ljMcTN sc-4baf7d1c-2 jFBAQk">Get Awesome Candids with <br> Utmost Security</h2>
         <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 iqmbuT jrZvPu sc-4baf7d1c-3 iPdfWq">We understand that privacy and security are of utmost importance to you. That’s why we have designed our platform to ensure that all your photos are secure and private.</p>
@@ -205,13 +205,13 @@
                 </div>
                 </span>
                 <div class="custom-imgsection">
-                    <img style="" src="./Bringer-assets/assets/icons/first.svg"></div>
+                    <img  src="./Bringer-assets/assets/icons/first.svg"></div>
             </div>
             </div>
 
             </div>
         </a>
-        <section data-blockid="26f7f51b-e262-4652-953a-9fac402f23a3" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-4baf7d1c-0 fhYMfy" style="">
+        <section data-blockid="26f7f51b-e262-4652-953a-9fac402f23a3" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-4baf7d1c-0 fhYMfy" >
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW" style="text-align: center; ">Sharing Photos?</p>
             <h2 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko ljMcTN sc-4baf7d1c-2 jFBAQk">Share event photos <br>in a single click</h2>
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 iqmbuT jrZvPu sc-4baf7d1c-3 iPdfWq">We understand sharing photos to a large group is time consuming and hard, so we've made it incredibly simple with AI</p>
@@ -252,16 +252,16 @@
 
 
     </main>
-    <footer role="contentinfo" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-b7b12257-0 iFeCcD" style="">
+    <footer role="contentinfo" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-b7b12257-0 iFeCcD"  >
         <section data-blockid="e6129af3-9d23-46a9-b03e-e4cdfa4c9863" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-4baf7d1c-0 fhYMfy">
-            <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW" style="">Bringer Pro: The Professional’s Choice</p>
+            <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW"  >Bringer Pro: The Professional’s Choice</p>
             <h2  style="color: white;white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">Elevate Your Brand, Drive Website Traffic, and Generate Leads with Bringer Pro</h2>
             <p style="color: gray; font-size: 13px;">With Bringer Pro, you can effortlessly brand your photos, attract more visitors to your website, and convert them into leads. Our advanced features are designed to meet the needs of professionals who demand the best. Don’t just take our word for it, explore the benefits of Bringer Pro for yourself.</p>
             <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-4baf7d1c-4 gwbgho ehZymP"><a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 lmpNJr ioXDdg border-round-full"
-                    aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf " style="">Discover More</span></a></div>
+                    aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf "  >Discover More</span></a></div>
         </section>
         <section data-blockid="24a7ffd9-cd9c-4817-894a-e825e8c27040" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 fgxAwG cNPxDM sc-12629982-0 eRSURy">
-            <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko hkRffL sc-12629982-1 cThGcW" style="">© Bringer
+            <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko hkRffL sc-12629982-1 cThGcW"  >© Bringer
             </p>
         </section>
         <ul class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 jQAhcZ cxYIHC">
@@ -274,12 +274,12 @@
                             class="Box-rui__sc-1g1k12l-0 sc-60d857bf-1 eMtgdA jAIdxc"><a target="_blank" rel="noopener" aria-label="LinkedIn" href="https://www.linkedin.com/company/bringer-ai/" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hTFxko bsDSER sc-60d857bf-0 blmjTQ"><img src="./Bringer-assets/assets/icons/LogoLinkedIn.svg" data-variant="mono" class="Icon-rui__sc-18fefp5-0 jyNclX"></span></a></li>
                             
         </ul>
-        <div class="Box-rui__sc-1g1k12l-0 Grid-rui__sc-11lbuez-0 dAacPo dPULKP"><button class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Action-rui__sc-1q34a5u-0 sc-c1bdfc96-0 gmCxVP cRZXuB" type="button"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="ButtonLayout__IconWrapper-rui__sc-15pyc45-0 dbkari"><img alt="IN" src="./Bringer-assets/assets/flags/IN.webp" srcSet="./Bringer-assets/assets/flags/IN.webp 1x, ./Bringer-assets/assets/flags/IN.png 1x" class="Box-rui__sc-1g1k12l-0 fUhwUb sc-4439bf8f-0 gpkdoY" style=""/></span>India</button>
+        <div class="Box-rui__sc-1g1k12l-0 Grid-rui__sc-11lbuez-0 dAacPo dPULKP"><button class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Action-rui__sc-1q34a5u-0 sc-c1bdfc96-0 gmCxVP cRZXuB" type="button"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="ButtonLayout__IconWrapper-rui__sc-15pyc45-0 dbkari"><img alt="IN" src="./Bringer-assets/assets/flags/IN.webp" srcSet="./Bringer-assets/assets/flags/IN.webp 1x, ./Bringer-assets/assets/flags/IN.png 1x" class="Box-rui__sc-1g1k12l-0 fUhwUb sc-4439bf8f-0 gpkdoY"  /></span>India</button>
             <ul class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-29219cc7-0 gwbgho ikOfvP">
-                <li class="Box-rui__sc-1g1k12l-0 dDglqp"><a title="Website terms" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 gDTNam jpAnLm bsDSER sc-f5724ed1-0 dCQdBy" href="https://photoowl.framer.ai/data-policy" style="">Data Policy</a></li>
-                <li class="Box-rui__sc-1g1k12l-0 dDglqp"><a title="Privacy" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 gDTNam jpAnLm bsDSER sc-f5724ed1-0 dCQdBy" href="https://photoowl.framer.ai/refund-policy" style="">Refund Policy</a></li>
-                <li class="Box-rui__sc-1g1k12l-0 dDglqp"><a title="Privacy" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 gDTNam jpAnLm bsDSER sc-f5724ed1-0 dCQdBy" href="https://photoowl.framer.ai/privacy-policy" style="">Privacy Policy</a></li>
-                <li class="Box-rui__sc-1g1k12l-0 dDglqp"><a title="Privacy" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 gDTNam jpAnLm bsDSER sc-f5724ed1-0 dCQdBy" href="https://photoowl.framer.ai/terms-and-conditions" style="">Terms and Conditions</a></li>
+                <li class="Box-rui__sc-1g1k12l-0 dDglqp"><a title="Website terms" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 gDTNam jpAnLm bsDSER sc-f5724ed1-0 dCQdBy" href="https://photoowl.framer.ai/data-policy"  >Data Policy</a></li>
+                <li class="Box-rui__sc-1g1k12l-0 dDglqp"><a title="Privacy" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 gDTNam jpAnLm bsDSER sc-f5724ed1-0 dCQdBy" href="https://photoowl.framer.ai/refund-policy"  >Refund Policy</a></li>
+                <li class="Box-rui__sc-1g1k12l-0 dDglqp"><a title="Privacy" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 gDTNam jpAnLm bsDSER sc-f5724ed1-0 dCQdBy" href="https://photoowl.framer.ai/privacy-policy"  >Privacy Policy</a></li>
+                <li class="Box-rui__sc-1g1k12l-0 dDglqp"><a title="Privacy" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 gDTNam jpAnLm bsDSER sc-f5724ed1-0 dCQdBy" href="https://photoowl.framer.ai/terms-and-conditions"  >Terms and Conditions</a></li>
             </ul>
         </div>
     </footer>
