--- a/pro.html
+++ b/pro.html
@@ -151,7 +151,7 @@
                 </div>
                 </span>
                 <div class="custom-imgsection">
-                    <img style="" src="./Bringer-assets/assets/icons/first.svg"></div>
+                    <img style="" src="./Bringer-assets/assets/icons/first.jpg"></div>
             </div>
             </div>
 
@@ -239,7 +239,7 @@
                 </div>
                 </span>
                 <div class="custom-imgsection">
-                    <img style="" src="./Bringer-assets/assets/icons/total.svg">
+                    <img style="" src="./Bringer-assets/assets/icons/total.jpg">
                 </div>
 
             </div>
@@ -256,7 +256,7 @@
                 </div>
                 </span>
                 <div class="custom-imgsection">
-                    <img style="" src="./Bringer-assets/assets/icons/plus.svg"></div>
+                    <img style="" src="./Bringer-assets/assets/icons/plus.jpg"></div>
             </div>
             </div>
 
@@ -313,7 +313,7 @@
             <div class="Box-rui__sc-1g1k12l-0 sc-d6539507-4 eMtgdA cbfDBN">
                 <figure class="Box-rui__sc-1g1k12l-0 AspectRatio__Base-rui__sc-3p9atg-2 joUpzD jnsDTP sc-d6539507-2 iOrjDN">
                     <div class="AspectRatio__Content-rui__sc-3p9atg-1 dBNTQa">
-                        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-d6539507-3 gwbgho lbzdjx"><img alt="" loading="lazy" decoding="async" data-nimg="fill" style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;object-fit:cover;color:transparent" sizes="100vw" src="./Bringer-assets/assets/icons/gallery2.svg"
+                        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-d6539507-3 gwbgho lbzdjx"><img alt="" loading="lazy" decoding="async" data-nimg="fill" style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;object-fit:cover;color:transparent" sizes="100vw" src="./Bringer-assets/assets/icons/gallery2.jpg"
                             />
                             <blockquote class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-d6539507-0 hTFxko jqtMvg">Wow!, I got all my photos instantly</blockquote>
                             <figcaption class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 sc-d6539507-1 gwbgho KOLhW BOuAV"><span class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 gwbgho kDavLO"><span class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kldYJM"></span></span>
@@ -324,7 +324,7 @@
                 </figure>
                 <figure class="Box-rui__sc-1g1k12l-0 AspectRatio__Base-rui__sc-3p9atg-2 joUpzD jnsDTP sc-d6539507-2 iOrjDN">
                     <div class="AspectRatio__Content-rui__sc-3p9atg-1 dBNTQa">
-                        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-d6539507-3 gwbgho lbzdjx"><img alt="" loading="lazy" decoding="async" data-nimg="fill" style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;object-fit:cover;color:transparent" sizes="100vw" src="./Bringer-assets/assets/icons/gallery1.svg"
+                        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-d6539507-3 gwbgho lbzdjx"><img alt="" loading="lazy" decoding="async" data-nimg="fill" style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;object-fit:cover;color:transparent" sizes="100vw" src="./Bringer-assets/assets/icons/gallery1.jpg"
                             />
                             <blockquote class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-d6539507-0 hTFxko jqtMvg">Really surprised when I got my photos!</blockquote>
                             <figcaption class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 sc-d6539507-1 gwbgho KOLhW BOuAV"><span class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 gwbgho kDavLO"><span class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kldYJM"></span></span>
@@ -337,7 +337,7 @@
             <div class="Box-rui__sc-1g1k12l-0 sc-d6539507-4 eMtgdA cbfDBN">
                 <figure class="Box-rui__sc-1g1k12l-0 AspectRatio__Base-rui__sc-3p9atg-2 joUpzD jnsDTP sc-d6539507-2 iOrjDN">
                     <div class="AspectRatio__Content-rui__sc-3p9atg-1 dBNTQa">
-                        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-d6539507-3 gwbgho lbzdjx"><img alt="" loading="lazy" decoding="async" data-nimg="fill" style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;object-fit:cover;color:transparent" sizes="100vw" src="./Bringer-assets/assets/icons/gallery3.svg"
+                        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-d6539507-3 gwbgho lbzdjx"><img alt="" loading="lazy" decoding="async" data-nimg="fill" style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;object-fit:cover;color:transparent" sizes="100vw" src="./Bringer-assets/assets/icons/gallery3.jpg"
                             />
                             <blockquote class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-d6539507-0 hTFxko jqtMvg">Love using Bringer, It simply gathered all my event photos with a simple selfie!</blockquote>
                             <figcaption class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 sc-d6539507-1 gwbgho KOLhW BOuAV"><span class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 gwbgho kDavLO"><span class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kldYJM"></span></span>
@@ -348,7 +348,7 @@
                 </figure>
                 <figure class="Box-rui__sc-1g1k12l-0 AspectRatio__Base-rui__sc-3p9atg-2 joUpzD jnsDTP sc-d6539507-2 iOrjDN">
                     <div class="AspectRatio__Content-rui__sc-3p9atg-1 dBNTQa">
-                        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-d6539507-3 gwbgho lbzdjx"><img alt="" loading="lazy" decoding="async" data-nimg="fill" style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;object-fit:cover;color:transparent" sizes="100vw" src="./Bringer-assets/assets/icons/gallery.svg"
+                        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-d6539507-3 gwbgho lbzdjx"><img alt="" loading="lazy" decoding="async" data-nimg="fill" style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;object-fit:cover;color:transparent" sizes="100vw" src="./Bringer-assets/assets/icons/gallery.jpg"
                             />
                             <blockquote class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-d6539507-0 hTFxko jqtMvg">I would recommend every event to use Bringer, It is so exciting to get my photos</blockquote>
                             <figcaption class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 sc-d6539507-1 gwbgho KOLhW BOuAV"><span class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 gwbgho kDavLO"><span class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kldYJM"></span></span>
