--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     
 <section class="dVOCfZ how-to-use-bringer">
     <div class="section-left">
-        <img src="./Bringer-assets/assets/icons/how to.png" alt="">
+        <img src="./Bringer-assets/assets/icons/how to.jpg" alt="">
     </div>
     <div class="section-right">
         <h6> How to use <span style="font-weight: 800;">Bringer?</span> </h6>
@@ -205,7 +205,7 @@
                 </div>
                 </span>
                 <div class="custom-imgsection">
-                    <img  src="./Bringer-assets/assets/icons/first.svg"></div>
+                    <img  src="./Bringer-assets/assets/icons/first.jpg"></div>
             </div>
             </div>
 
