--- a/pro.html
+++ b/pro.html
@@ -7,7 +7,7 @@
 
     <meta property="og:title" content="Bringer Pro | Make the most out of photo sharing" />
     <meta property="og:description" content="Get more leads while you share on Bringer" />
-    <meta property="og:url" content="https://bringerapp.com" />
+    <meta property="og:url" content="https://bringerapp.com/pro" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://bringerapp.com/Bringer-assets/assets/social%20share.png" />
     <meta property="og:image:alt" content="Bringer Pro" />
@@ -240,7 +240,7 @@
                 </span>
                 <div class="custom-imgsection">
 
-                    <img style="" src="./Bringer-assets/assets/icons/total.png">
+                    <img  src="./Bringer-assets/assets/icons/total.png">
 
                 </div>
 
