--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,9 +7,9 @@
 
     <meta property="og:title" content="Bringer Pro | Make the most out of photo sharing" />
     <meta property="og:description" content="Get more leads while you share on Bringer" />
-    <meta property="og:url" content="https://www.bringerapp.com" />
+    <meta property="og:url" content="https://bringerapp.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.bringerapp.com/Bringer-assets/assets/social%20share.png" />
+    <meta property="og:image" content="https://bringerapp.com/Bringer-assets/assets/social%20share.png" />
     <meta property="og:image:alt" content="Bringer Pro" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
