--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Jost:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,700&display=swap"
         rel="stylesheet">
-    <link rel="canonical" href="https://bringerapp.com" />
+    <link rel="canonical" href="https://bringerapp.com/privacy-policy" />
     <meta name="msapplication-TileColor" content="#191C1F" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <meta name="format-detection" content="telephone=no" />
