--- a/pro.html
+++ b/pro.html
@@ -90,7 +90,7 @@
                                 type="button"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf"><span class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 bwaeom">Contact us</span></span></button></div>
                     </div><span class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 gwbgho hetXNt"><a href="https://business.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 beemZw lbSvEU" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span>
                     <span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Try Bringer Free</span>
-                    </a><a data-blockid="signup-button" href="https://form.jotform.com/233184158228054" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld"
+                    </a><a data-blockid="signup-button" href="/pro-form/" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld"
                         aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get Bringer Pro</span></a></span>
                 </div>
                 <div class="custom-nav">
@@ -98,7 +98,7 @@
 
                         <div><a class="bwaeom" style="pointer-events: all" href="https://api.whatsapp.com/send/?phone=%2B918248171862&text=Hi">Contact us</a></div>
                         <div><button onclick="window.open('https://business.bringerapp.com')" class="custom-button">Try Bringer Free</button></div>
-                        <div><button onclick="window.open('https://form.jotform.com/233184158228054')" class="custom-button">Get Bringer Pro</button></div>
+                        <div><button onclick="window.open('/pro-form/')" class="custom-button">Get Bringer Pro</button></div>
                     </div>
                 </div>
                 <div class="Box-rui__sc-1g1k12l-0 bqwQoF"  >
@@ -126,7 +126,7 @@
                             </span>
                         </div>
                         <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 gwbgho hJKPBb" style="margin-top: 20px" ;>
-                            <a href="https://form.jotform.com/233184158228054" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld"
+                            <a href="/pro-form/" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld"
                                 aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get Bringer Pro</span></a>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
         <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 iqmbuT jrZvPu sc-4baf7d1c-3 iPdfWq">Storing, Sorting and Distributing photos is now simple and secure</p>
     </section>
     <section data-blockid="5e10466a-a827-4df4-aeff-f54756df0bdb" data-type="tile-default" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-f691958d-0 cUeicM">
-        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 doVmft bsDSER sc-f691958d-1 jnxckT" href="https://form.jotform.com/233184158228054" style="background-color: #191C1F;z-index:-100;">
+        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 doVmft bsDSER sc-f691958d-1 jnxckT" href="/pro-form/" style="background-color: #191C1F;z-index:-100;">
             <div class="custom-section">
                 <span class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-f691958d-2 gwbgho iKkCyI"><h3 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-2eed654d-0 hTFxko bdsGII" style="margin-top: 0;"><span max="5" class="LineClamp__LineClampBase-rui__sc-1asyw6f-0 eAFepp">AI Photo Distribution</span></h3>
                 <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-e5e942d-0 hTFxko itRRDa">Elevate the customer experience at events by sharing your photos in real-time, using advanced facial recognition and event photography technology.</p>
@@ -159,7 +159,7 @@
         </a>
     </section>
     <section data-blockid="0a78ee8c-d8e7-4d54-8efe-174d4f4383a6" data-type="tile-default" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-f691958d-0 cUeicM">
-        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hdgcKm bsDSER sc-f691958d-1 jnxckT" href="https://form.jotform.com/233184158228054">
+        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hdgcKm bsDSER sc-f691958d-1 jnxckT" href="/pro-form/">
 
             <div class="custom-section">
                 <div class="custom-imgsection">
@@ -187,7 +187,7 @@
         </a>
     </section>
     <section data-blockid="5e10466a-a827-4df4-aeff-f54756df0bdb" data-type="tile-default" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-f691958d-0 gZiWci">
-        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hdgcKm bsDSER sc-f691958d-1 jnxckT" href="https://form.jotform.com/233184158228054">
+        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hdgcKm bsDSER sc-f691958d-1 jnxckT" href="/pro-form/">
             <span class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-f691958d-2 gwbgho iKkCyI"><h3 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-2eed654d-0 hTFxko jpAnLm cewLbq"><span max="5" class="LineClamp__LineClampBase-rui__sc-1asyw6f-0 eAFepp">No app installation Required</span></h3>
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-e5e942d-0 hTFxko itRRDa">Event attendees get a whatsapp link whenever they recieve their face matching Photos.</p>
             <div class="custom-section1" style="align-items: flex-end;">
@@ -203,7 +203,7 @@
         </a>
     </section>
     <section data-blockid="5e10466a-a827-4df4-aeff-f54756df0bdb" data-type="tile-default" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-f691958d-0 duOA-DS">
-        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 doVmft bsDSER sc-f691958d-1 jnxckT" href="https://form.jotform.com/233184158228054">
+        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 doVmft bsDSER sc-f691958d-1 jnxckT" href="/pro-form/">
             <span class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-f691958d-2 gwbgho iKkCyI"><h3 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-2eed654d-0 hTFxko jpAnLm cewLbq"><span max="5" class="LineClamp__LineClampBase-rui__sc-1asyw6f-0 eAFepp">Use a single QR code to distribute all your event photos.</span></h3>
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-e5e942d-0 hTFxko itRRDa">Do not hassle back and forth with multiple drive links just share the Bringer QR code or link.</p>
             <div class="custom-section1" style="align-items: flex-end;">
@@ -225,7 +225,7 @@
         <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 iqmbuT jrZvPu sc-4baf7d1c-3 iPdfWq">Enhance lead generation by seamlessly integrating WhatsApp API</p>
     </section>
     <section data-blockid="05bff40e-a0a0-4572-8153-03e62f420689" data-type="tile-default" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-f691958d-0 cUeicM">
-        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hdgcKm bsDSER sc-f691958d-1 jnxckT" href="https://form.jotform.com/233184158228054" style="padding:30px;">
+        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hdgcKm bsDSER sc-f691958d-1 jnxckT" href="/pro-form/" style="padding:30px;">
             <div class="custom-section">
                 <span class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-f691958d-2 gwbgho iKkCyI"><h3 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-2eed654d-0 hTFxko bdsGII " style="margin-top: 0;"><span max="5" class="LineClamp__LineClampBase-rui__sc-1asyw6f-0 eAFepp" style="margin-top: 0;font-family: Inter;font-size: 48px;font-weight: 600;line-height: 54px;letter-spacing: -0.4000000059604645px;text-align: left;">Boost your lead generation with Whatsapp API. </span></h3>
                 <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-e5e942d-0 hTFxko itRRDa 
@@ -250,7 +250,7 @@
         </a>
     </section>
     <section data-blockid="5e10466a-a827-4df4-aeff-f54756df0bdb" data-type="tile-default" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-f691958d-0 gZiWci">
-        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hdgcKm bsDSER sc-f691958d-1 jnxckT" href="https://form.jotform.com/233184158228054">
+        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hdgcKm bsDSER sc-f691958d-1 jnxckT" href="/pro-form/">
             <span class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-f691958d-2 gwbgho iKkCyI"><h3 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-2eed654d-0 hTFxko jpAnLm cewLbq"><span max="5" class="LineClamp__LineClampBase-rui__sc-1asyw6f-0 eAFepp">Gather followers as you share photos.</span></h3>
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-e5e942d-0 hTFxko itRRDa">Gain a dedicated following as you share photos with advanced facial recognition and event photography technology.</p>
             <div class="custom-section1" style="align-items: flex-end;">
@@ -266,7 +266,7 @@
         </a>
     </section>
     <section data-blockid="5e10466a-a827-4df4-aeff-f54756df0bdb" data-type="tile-default" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-f691958d-0 duOA-DS">
-        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 doVmft bsDSER sc-f691958d-1 jnxckT" href="https://form.jotform.com/233184158228054">
+        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 doVmft bsDSER sc-f691958d-1 jnxckT" href="/pro-form/">
             <span class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-f691958d-2 gwbgho iKkCyI"><h3 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-2eed654d-0 hTFxko jpAnLm cewLbq"><span max="5" class="LineClamp__LineClampBase-rui__sc-1asyw6f-0 eAFepp">Send Marketing messages to all your followers.</span></h3>
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-e5e942d-0 hTFxko itRRDa">Send promotional messages with Whatsapp chat bots and gather leads at one single place.</p>
             <div class="custom-section1" style="align-items: flex-end;">
@@ -283,7 +283,7 @@
         </a>
     </section>
     <section data-blockid="05bff40e-a0a0-4572-8153-03e62f420689" data-type="tile-default" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-f691958d-0 cUeicM">
-        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hdgcKm bsDSER sc-f691958d-1 jnxckT" href="https://form.jotform.com/233184158228054" style="padding:30px;">
+        <a class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hdgcKm bsDSER sc-f691958d-1 jnxckT" href="/pro-form/" style="padding:30px;">
             <div class="custom-section">
                 <span class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-f691958d-2 gwbgho iKkCyI"><h3 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-2eed654d-0 hTFxko bdsGII " style="margin-top: 0;"><span max="5" class="LineClamp__LineClampBase-rui__sc-1asyw6f-0 eAFepp" style="margin-top: 0;font-family: Inter;font-size: 48px;font-weight: 600;line-height: 54px;letter-spacing: -0.4000000059604645px;text-align: left;">Grow your business with Automatic lead generation! </span></h3>
                 <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-e5e942d-0 hTFxko itRRDa 
@@ -365,7 +365,7 @@
     <section data-blockid="08eba1b7-de14-4dbc-a4a4-6171c6a3ad00" class="Box-rui__sc-1g1k12l-0 hjGhmc"></section>
     <section data-blockid="31854489-d4aa-4d54-b0df-4e0abcc5adbb" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-4baf7d1c-0 fhYMfy">
         <h2 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko ljMcTN sc-4baf7d1c-2 jFBAQk" style="justify-content: center;"  >Join Bringer and get more from your Photos</h2>
-        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-4baf7d1c-4 gwbgho ehZymP" style="justify-content: center;"><a href="https://form.jotform.com/233184158228054" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJldd"
+        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-4baf7d1c-4 gwbgho ehZymP" style="justify-content: center;"><a href="/pro-form/" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJldd"
                 aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf"  >Get Bringer Pro</span></a></div>
     </section>
     <section data-blockid="ca2266ee-a5d4-41dc-8acd-039d593389c2" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 bNBbtE cNPxDM">
@@ -393,14 +393,14 @@
         <section data-blockid="e6129af3-9d23-46a9-b03e-e4cdfa4c9863" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 dVOCfZ cNPxDM sc-4baf7d1c-0 fhYMfy">
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW"  >What are you waiting for?</p>
             <h2 class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko ljMcTN sc-4baf7d1c-2 jFBAQk"  >Join Bringer now!</h2>
-            <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-4baf7d1c-4 gwbgho ehZymP"><a href="https://form.jotform.com/233184158228054" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 lmpNJr ioXDdg"
+            <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-4baf7d1c-4 gwbgho ehZymP"><a href="/pro-form/" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 lmpNJr ioXDdg"
                     aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf"  >Join Now</span></a></div>
         </section>
         <section data-blockid="24a7ffd9-cd9c-4817-894a-e825e8c27040" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 fgxAwG cNPxDM sc-12629982-0 eRSURy">
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko hkRffL sc-12629982-1 cThGcW"  >© Bringer </p>
         </section>
         <ul class="Box-rui__sc-1g1k12l-0 Stack-rui__sc-1t382g5-0 HStack-rui__sc-4zbgg7-0 jQAhcZ cxYIHC">
-            <li class="Box-rui__sc-1g1k12l-0 sc-60d857bf-1 iUDYJj jAIdxc"><a href="https://form.jotform.com/233184158228054" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hTFxko bsDSER"><span title="Bringer Pro" class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 kBjPGM custom-title" style="color:white;">Bringer</li>
+            <li class="Box-rui__sc-1g1k12l-0 sc-60d857bf-1 iUDYJj jAIdxc"><a href="/pro-form/" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hTFxko bsDSER"><span title="Bringer Pro" class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 kBjPGM custom-title" style="color:white;">Bringer</li>
                 <li
                 class="Box-rui__sc-1g1k12l-0 sc-60d857bf-1 eMtgdA jAIdxc"><a target="_blank" rel="noopener" aria-label="Instagram" href="https://instagram.com/bringer.ai" class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 sc-85172584-0 hTFxko bsDSER sc-60d857bf-0 blmjTQ"><img src="./Bringer-assets/assets/icons/LogoInstagram.svg" data-variant="mono" class="Icon-rui__sc-18fefp5-0 jyNclX"></span></a></li>
 
