--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
                     <a data-blockid="signup-button" href="./pro.html" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" style="background-color: white; border: 2px solid black;"
                         aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get Bringer Pro</span></a>
                     <a data-blockid="signup-button" href="https://business.bringerapp.com/" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0  custom-button border-round-full"
-                        aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Upload Photos</span></a>
-                    <a data-blockid="signup-button" href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full"
-                        aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get Photos</span></a>
+                        aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">For Photographers</span></a>
                     </span>
                 </div>
                 <div class="custom-nav">
@@ -110,7 +108,7 @@
 
 
                         <div><button onclick="window.open('https://business.bringerapp.com/')" class="custom-button">Upload Photos</button></div>
-                        <div><button onclick="window.open('https://app.bringerapp.com')" class="custom-button">Get Photos</button></div>
+                        <div><button onclick="window.open('https://app.bringerapp.com')" class="custom-button" style="background-color:#FFD400; opacity: 0.85; color: #191C1F;">Get My Photos</button></div>
                     </div>
                 </div>
                 <div class="Box-rui__sc-1g1k12l-0 bqwQoF" >
@@ -133,9 +131,15 @@
                         </h1>
 
                         
-                        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 gwbgho hJKPBb" style="margin-top: 20px" ;>
-                            <a href="https://business.bringerapp.com" class="custom-button ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0   border-round-full" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Upload Photos</span></a>
-                            <a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get My Photos</span></a>
+                        <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 gwbgho hJKPBb" style="margin-top: 20px; position: relative;" ;>
+
+                            <a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf" style="padding-left:30px; padding-right:30px">Get My Photos</span></a>
+                            <div class="cone">
+                                
+                            </div>
+                            <div class="explicit">
+                                Register and Take a selfie to get your photos!
+                            </div>
                         </div>
                     </div>
                     <div>
