--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="custom-navelements">
 
 
-                        <div><button onclick="window.open('https://business.bringerapp.com/')" class="custom-button">Upload Photos</button></div>
+                        <div><button onclick="window.open('https://bringerapp.com/pro')" class="custom-button">For Photographers</button></div>
                         <div><button onclick="window.open('https://app.bringerapp.com')" class="custom-button" style="background-color:#FFD400; opacity: 0.85; color: #191C1F;">Get My Photos</button></div>
                     </div>
                 </div>
