--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </a>
                     <a data-blockid="signup-button" href="./pro.html" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" style="background-color: white; border: 2px solid black;"
                         aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">Get Bringer Pro</span></a>
-                    <a data-blockid="signup-button" href="https://business.bringerapp.com/" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0  custom-button border-round-full"
+                    <a data-blockid="signup-button" href="https://bringerapp.com/pro" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0  custom-button border-round-full"
                         aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf">For Photographers</span></a>
                     </span>
                 </div>
@@ -107,7 +107,7 @@
                     <div class="custom-navelements">
 
 
-                        <div><button onclick="window.open('https://business.bringerapp.com/')" class="custom-button">Upload Photos</button></div>
+                        <div><button onclick="window.open('https://bringerapp.com/pro')" class="custom-button">For Photographers</button></div>
                         <div><button onclick="window.open('https://app.bringerapp.com')" class="custom-button" style="background-color:#FFD400; opacity: 0.85; color: #191C1F;">Get My Photos</button></div>
                     </div>
                 </div>
@@ -133,7 +133,8 @@
                         
                         <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 gwbgho hJKPBb" style="margin-top: 20px; position: relative;" ;>
 
-                            <a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf" style="padding-left:30px; padding-right:30px">Get My Photos</span></a>
+                            <a href="https://app.bringerapp.com" style="padding-left: 34px;padding-right: 34px;" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf uibutton" >Get My Photos</span></a>
+                            <a href="https://bringerapp.com/pro" style="background-color: #191C1F; color: white;" class="check ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 gPKCMx iriJld border-round-full" aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf uibutton"  >For Photographers</span></a>
                             <div class="cone">
                                 
                             </div>
@@ -263,7 +264,7 @@
             <p class="Box-rui__sc-1g1k12l-0 Text-rui__sc-1be7qv6-0 hTFxko kZtapL sc-4baf7d1c-1 kRhqNW"  >Bringer Pro: The Professional’s Choice</p>
             <h2  style="color: white;white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">Elevate Your Brand, Drive Website Traffic, and Generate Leads with Bringer Pro</h2>
             <p style="color: gray; font-size: 13px;">With Bringer Pro, you can effortlessly brand your photos, attract more visitors to your website, and convert them into leads. Our advanced features are designed to meet the needs of professionals who demand the best. Don’t just take our word for it, explore the benefits of Bringer Pro for yourself.</p>
-            <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-4baf7d1c-4 gwbgho ehZymP"><a href="https://app.bringerapp.com" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 lmpNJr ioXDdg border-round-full"
+            <div class="Box-rui__sc-1g1k12l-0 Flex-rui__sc-p3ay74-0 sc-4baf7d1c-4 gwbgho ehZymP"><a href="https://bringerapp.com/pro" class="ButtonBase__ButtonBaseWrapper-rui__sc-1aqanxw-1 dEIzZN ButtonBase-rui__sc-1aqanxw-2 ButtonLayout___StyledButtonBase-rui__sc-15pyc45-2 iHLlRu cFZUmK Button-rui__sc-1gvtpv4-0 sc-b1d8265f-0 lmpNJr ioXDdg border-round-full"
                     aria-disabled="false"><span data-rui="state-layer" class="ButtonBase__ButtonStateLayer-rui__sc-1aqanxw-0 gvbSTM"></span><span class="Ellipsis__EllipsisBase-rui__sc-1uis3y5-0 ezeIGf "  >Discover More</span></a></div>
         </section>
         <section data-blockid="24a7ffd9-cd9c-4817-894a-e825e8c27040" class="Box-rui__sc-1g1k12l-0 sc-d85bbb3d-0 fgxAwG cNPxDM sc-12629982-0 eRSURy">
